modified to include dataset parameter

--- a/config/translation/translation_baseline.yaml
+++ b/config/translation/translation_baseline.yaml
@@ -13,6 +13,7 @@ model:
     - linear: [128, 1] #we predict a single value because we have a regression task
   task: "regression"
   use_sincos_encoding: false
+  dataset: "translation"
 
 
 training:
